<resources>
    <string name="app_name">Calculator</string>
    <string name="ac">AC</string>
    <string name="seven">7</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="times">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="plusOrMinus">±</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="invalid_format">Invalid Format</string>
    <string name="divide_by_zero_error">Can\'t Divide By Zero</string>
    <string name="unknown_operator">Unknown operator: %1$s</string>
</resources>