<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <View
        android:id="@+id/input_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_clear" />

    <View
        android:id="@+id/handle"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/input_handle"
        app:layout_constraintBottom_toBottomOf="@id/input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.4"
        android:fontFamily="@font/doppio_one_regular"
        android:text=""
        android:textColor="@color/brown"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/text_current"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="25 + 12" />

    <TextView
        android:id="@+id/text_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/brown"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@id/input_background"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="37 + 5 × 3 - 8 / 2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_clear"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/ac"
        app:layout_constraintTop_toTopOf="@+id/button_backspace"
        app:layout_constraintEnd_toEndOf="@id/button_seven"
        app:layout_constraintStart_toStartOf="@id/button_seven" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_backspace"
        style="@style/CalculatorButton.DigitButton"
        android:drawableStart="@drawable/arrow_left"
        android:padding="24.5dp"
        app:layout_constraintTop_toTopOf="@+id/button_percent"
        app:layout_constraintEnd_toEndOf="@id/button_eight"
        app:layout_constraintStart_toStartOf="@id/button_eight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_percent"
        style="@style/CalculatorButton.OperationButton"
        android:text="@string/percent"
        app:layout_constraintTop_toTopOf="@+id/button_divide"
        app:layout_constraintEnd_toEndOf="@id/button_nine"
        app:layout_constraintStart_toStartOf="@id/button_nine" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_divide"
        style="@style/CalculatorButton.OperationButton"
        android:text="@string/divide"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_times"
        app:layout_constraintEnd_toEndOf="@id/button_times"
        app:layout_constraintStart_toStartOf="@id/button_times" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_seven"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/seven"
        app:layout_constraintTop_toTopOf="@+id/button_eight"
        app:layout_constraintEnd_toEndOf="@id/button_four"
        app:layout_constraintStart_toStartOf="@id/button_four" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_eight"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/eight"
        app:layout_constraintTop_toTopOf="@+id/button_nine"
        app:layout_constraintEnd_toEndOf="@id/button_five"
        app:layout_constraintStart_toStartOf="@id/button_five" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_nine"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/nine"
        app:layout_constraintTop_toTopOf="@+id/button_times"
        app:layout_constraintEnd_toEndOf="@id/button_six"
        app:layout_constraintStart_toStartOf="@id/button_six" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_times"
        style="@style/CalculatorButton.OperationButton"
        android:text="@string/times"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="@id/button_plus"
        app:layout_constraintStart_toStartOf="@id/button_plus" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_four"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/four"
        app:layout_constraintTop_toTopOf="@+id/button_five"
        app:layout_constraintEnd_toEndOf="@id/button_one"
        app:layout_constraintStart_toStartOf="@id/button_one" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_five"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/five"
        app:layout_constraintTop_toTopOf="@+id/button_six"
        app:layout_constraintEnd_toEndOf="@id/button_two"
        app:layout_constraintStart_toStartOf="@id/button_two" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_six"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/six"
        app:layout_constraintTop_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="@id/button_three"
        app:layout_constraintStart_toStartOf="@id/button_three" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_plus"
        style="@style/CalculatorButton.OperationButton"
        android:text="@string/plus"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="@id/button_minus"
        app:layout_constraintStart_toStartOf="@id/button_minus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_one"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/one"
        app:layout_constraintTop_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="@id/button_sign"
        app:layout_constraintStart_toStartOf="@id/button_sign" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_two"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/two"
        app:layout_constraintTop_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="@id/button_zero"
        app:layout_constraintStart_toStartOf="@id/button_zero"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_three"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/three"
        app:layout_constraintTop_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="@id/button_dot"
        app:layout_constraintStart_toStartOf="@id/button_dot" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_minus"
        style="@style/CalculatorButton.OperationButton"
        android:text="@string/minus"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintEnd_toEndOf="@id/button_equal"
        app:layout_constraintStart_toStartOf="@id/button_equal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/plusOrMinus"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@+id/button_zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_equal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_zero"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/zero"
        app:layout_constraintEnd_toStartOf="@+id/button_dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_sign"
        app:layout_constraintTop_toTopOf="@+id/button_equal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_dot"
        style="@style/CalculatorButton.DigitButton"
        android:text="@string/dot"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_zero"
        app:layout_constraintTop_toTopOf="@+id/button_equal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_equal"
        style="@style/CalculatorButton.OperationButton"
        android:text="@string/equal"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_dot" />

</androidx.constraintlayout.widget.ConstraintLayout>